# LLMRouter

./: PROMPT_FORMAT_UPDATE.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: deploy-docs.yml
ComfyUI/: README.md
configs/model_config_test/: causallm_router.yaml  graphrouter.yaml  knnmultiroundrouter.yaml  knnrouter.yaml  router_r1.yaml  smallest_llm.yaml
configs/model_config_train/: causallm_router.yaml  gmtrouter.yaml  graphrouter.yaml  knnmultiroundrouter.yaml  mlprouter.yaml
data/charades-ego/: README.md
data/multimodal_tasks/: README.md
llmrouter/cli/: router_chat.py  router_inference.py  router_main.py  router_train.py
llmrouter/data/: README.md  __init__.py  api_calling_evaluation.py  data.py  data_generation.py  generate_llm_embeddings.py  sample_config.yaml
llmrouter/models/: __init__.py  base_trainer.py  meta_router.py
llmrouter/prompts/: README.md  __init__.py
llmrouter/utils/: __init__.py  api_calling.py  data_convert.py  data_processing.py  embeddings.py  evaluation.py  model_loader.py  prompting.py  router_helpers.py
notebooks/: README.md
notebooks/automix_router/: 01_automix_router_training.ipynb  02_automix_router_inference.ipynb
notebooks/causallm_router/: 01_causallm_router_training.ipynb  02_causallm_router_inference.ipynb
notebooks/custom_router/: 01_creating_custom_routers.ipynb
notebooks/data_preparation/: 01_data_preparation.ipynb
notebooks/dcrouter/: 01_dcrouter_training.ipynb  02_dcrouter_inference.ipynb
notebooks/elorouter/: 01_elorouter_inference.ipynb
tests/: test_smallest_router.py
(+69 files in other folders)
